# dea-genai-agent

./: .dockerignore  .env.example  API_REFERENCE.md  BUG_FIX_DICT_LOWERCASE.md  CODE_REVIEW_ANALYSIS.md  COMPLETE_SYSTEM_SUMMARY.md  CONFIG_BEFORE_AFTER.md  CONFIG_CLEANUP_SUMMARY.md  CONFIG_UPDATE_FINAL_SUMMARY.md  DELIVERABLES.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_GITHUB_SUMMARY.md  Dockerfile  EMBEDDING_SYSTEM.md  GITHUB_DEPLOYMENT_CHECKLIST.txt  GITHUB_DEPLOYMENT_GUIDE.md  GITHUB_QUICK_START.md  GITHUB_SETUP_GUIDE.md  HLD.md  IMPLEMENTATION_GUIDE.md  MIGRATION_GUIDE.md  MULTIFORMAT_IMPLEMENTATION_COMPLETE.md  MULTIFORMAT_INTEGRATION_SETUP.md  MULTIFORMAT_REPORTS_GUIDE.md  On-device Ai Memory Intelligence Agent – Software Requirements & Design.docx  README (1).md  README.md  README.md.orig  START_HERE.md  TODO.md  docker-compose.yml  email_report.html  github_setup.py  main.py  pyproject.toml  requirements-ci.txt  requirements.txt  test_embedding_provider.py  test_embeddings.py  test_multiformat.py  (+3 more)
FIXES/: auto_fix_bugs.py
results/reports/: Flow.ini  IMPLEMENTATION_SUMMARY.md  On-device Ai Memory Intelligence Agent – Software Requirements & Design (1).docx  README.md  email_report.html  pyproject.toml  report.pptx  summary.json  summary.txt  transcript.txt
results/reports/.github/workflows/: tests.yml
results/reports/Dashboard/: requirements.txt
results/reports/src/: collector.py  podcast_generator.py  pptx_generator.py  rag_config.py  rag_orchestrator_enhanced.py  source_link_processor.py  summary_generator.py
results/reports/tests/: test_backup_system.py
(+1287 files in other folders)
