[project]
name = "generativeai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.9.0",
    "ollama>=0.3.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.0",
    "requests>=2.31.0",
]
