[project]
name = "generativeai-agent"
version = "2.0.0"
description = "On-Device AI Research Intelligence Agent - Discover, analyze, and deliver insights on edge AI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "groq>=0.9.0",
    "google-generativeai>=0.3.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "python-pptx>=0.6.21",
    "reportlab>=4.0.0",
    "gTTS>=2.3.0",
    "pydub>=0.25.1",
    "colorlog>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]
monitoring = [
    "sentry-sdk>=1.40.0",
    "prometheus-client>=0.19.0",
]

